Oppdatere felles og prosesstask mm (#1364)